# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  README.md  configuration.yaml
.sqlx/: query-c3cd921567d76588e85034dfa981c6a6425e5f11659db336d44ab4d5466e4ca8.json
configuration/: base.yaml
migrations/: 20241119004453_create_subscriptions_table.sql
scripts/: build.sh  init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/model/: domain.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
