[package]
name = "emailReport"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "emailReport"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.214", features = ["derive"] }
config = "0.14.1"
env_logger = "0.11.5"
log = "0.4.20"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.1", features = ["env-filter","registry"] }
tracing-bunyan-formatter = "0.3.0"
tracing-log = "0.2.0"
once_cell = "1.19.0"
secrecy = { version = "0.10.0", features = ["serde"] }
tracing-actix-web = "0.7.18"
unicode-segmentation = "1.10.0"
validator = "0.20.0"
[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
    "runtime-async-std-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.12.9"
